@@ -3,7 +3,7 @@ SNANDer
 
 SNANDer - Serial Nor/nAND/Eeprom programmeR (based on CH341A)
 
-![ch341a-nextProgrammer](https://raw.githubusercontent.com/Droid-MAX/SNANDer/master/photos/ch341a-nextProgrammer.jpg)
+![ch341a-nextProgrammer](photos/ch341a-nextProgrammer.jpg)
 
 **Requirements**
 
@@ -268,76 +268,77 @@ SPI NAND Flash Support List:
 014. ESMT F50L1G
 015. ESMT F50L1G41LB
 016. ESMT F50L2G41LB
-017. WINBOND W25N01G
-018. WINBOND W25N02KV
-019. WINBOND W25M02G
-020. MXIC MX35LF1G
-021. MXIC MX35LF2G
-022. MXIC MX35LF2GE4AD
-023. ZENTEL A5U12A21ASC
-024. ZENTEL A5U1GA21BWS
-025. ETRON EM73C044SNB
-026. ETRON EM73C044SND
-027. ETRON EM73C044SNF
-028. ETRON EM73C044VCA
-029. ETRON EM73C044VCD
-030. ETRON EM73D044VCA
-031. ETRON EM73D044VCB
-032. ETRON EM73D044VCD
-033. ETRON EM73D044VCG
-034. ETRON EM73D044VCH
-035. ETRON EM73D044SNA
-036. ETRON EM73D044SNC
-037. ETRON EM73D044SND
-038. ETRON EM73D044SNF
-039. ETRON EM73E044SNA
-040. TOSHIBA TC58CVG0S3H
-041. TOSHIBA TC58CVG1S3H
-042. TOSHIBA TC58CVG2S0H
-043. KIOXIA TC58CVG2S0HRAIJ
-044. MICRON MT29F1G01
-045. MICRON MT29F2G01
-046. MICRON MT29F4G01
-047. HEYANG HYF1GQ4UAACAE
-048. HEYANG HYF2GQ4UAACAE
-049. HEYANG HYF2GQ4UHCCAE
-050. HEYANG HYF1GQ4UDACAE
-051. HEYANG HYF2GQ4UDACAE
-052. PN PN26G01A-X
-053. PN PN26G02A-X
-054. PN PN26Q01A-X
-055. ATO ATO25D1GA
-056. ATO ATO25D2GA
-057. ATO ATO25D2GB
-058. FM FM25S01
-059. FM FM25S01A
-060. FM FM25G01B
-061. FM FM25G02B
-062. FM FM25G02C
-063. FM FM25G02
-064. XTX XT26G02B
-065. XTX XT26G01C
-066. XTX XT26G01A
-067. XTX XT26G02A
-068. MIRA PSU1GS20BN
-069. BIWIN BWJX08U
-070. BIWIN BWET08U
-071. FORESEE FS35ND01GD1F1
-072. FORESEE FS35ND01GS1F1
-073. FORESEE FS35ND02GS2F1
-074. FORESEE FS35ND02GD1F1
-075. FORESEE FS35ND01GS1Y2
-076. FORESEE FS35ND02G-S3Y2
-077. FORESEE FS35ND04G-S2Y2
-078. DS DS35Q2GA
-079. DS DS35Q1GA
-080. FISON CS11G0T0A0AA
-081. FISON CS11G1T0A0AA
-082. FISON CS11G0G0A0AA
-083. TYM TYM25D2GA01
-084. TYM TYM25D2GA02
-085. TYM TYM25D1GA03
-086. XINCUN XCSP1AAWH-NT
+017. WINBOND W25N01GV
+018. WINBOND W25N01GW
+019. WINBOND W25N02KV
+020. WINBOND W25M02GV
+021. MXIC MX35LF1G
+022. MXIC MX35LF2G
+023. MXIC MX35LF2GE4AD
+024. ZENTEL A5U12A21ASC
+025. ZENTEL A5U1GA21BWS
+026. ETRON EM73C044SNB
+027. ETRON EM73C044SND
+028. ETRON EM73C044SNF
+029. ETRON EM73C044VCA
+030. ETRON EM73C044VCD
+031. ETRON EM73D044VCA
+032. ETRON EM73D044VCB
+033. ETRON EM73D044VCD
+034. ETRON EM73D044VCG
+035. ETRON EM73D044VCH
+036. ETRON EM73D044SNA
+037. ETRON EM73D044SNC
+038. ETRON EM73D044SND
+039. ETRON EM73D044SNF
+040. ETRON EM73E044SNA
+041. TOSHIBA TC58CVG0S3H
+042. TOSHIBA TC58CVG1S3H
+043. TOSHIBA TC58CVG2S0H
+044. KIOXIA TC58CVG2S0HRAIJ
+045. MICRON MT29F1G01
+046. MICRON MT29F2G01
+047. MICRON MT29F4G01
+048. HEYANG HYF1GQ4UAACAE
+049. HEYANG HYF2GQ4UAACAE
+050. HEYANG HYF2GQ4UHCCAE
+051. HEYANG HYF1GQ4UDACAE
+052. HEYANG HYF2GQ4UDACAE
+053. PN PN26G01A-X
+054. PN PN26G02A-X
+055. PN PN26Q01A-X
+056. ATO ATO25D1GA
+057. ATO ATO25D2GA
+058. ATO ATO25D2GB
+059. FM FM25S01
+060. FM FM25S01A
+061. FM FM25G01B
+062. FM FM25G02B
+063. FM FM25G02C
+064. FM FM25G02
+065. XTX XT26G02B
+066. XTX XT26G01C
+067. XTX XT26G01A
+068. XTX XT26G02A
+069. MIRA PSU1GS20BN
+070. BIWIN BWJX08U
+071. BIWIN BWET08U
+072. FORESEE FS35ND01GD1F1
+073. FORESEE FS35ND01GS1F1
+074. FORESEE FS35ND02GS2F1
+075. FORESEE FS35ND02GD1F1
+076. FORESEE FS35ND01GS1Y2
+077. FORESEE FS35ND02G-S3Y2
+078. FORESEE FS35ND04G-S2Y2
+079. DS DS35Q2GA
+080. DS DS35Q1GA
+081. FISON CS11G0T0A0AA
+082. FISON CS11G1T0A0AA
+083. FISON CS11G0G0A0AA
+084. TYM TYM25D2GA01
+085. TYM TYM25D2GA02
+086. TYM TYM25D1GA03
+087. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT25DF321
